Fix horizontal alignment of pagination bar

--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,7 @@ ul.pagination {
   display: block;
   text-align: center;
   list-style-type: none;
+  padding: 0;
 }
 ul.pagination li {
   display: inline-block;
